# pytest-parametrization

./: parametrization.py  setup.cfg  setup.py
.github/workflows/: main.yml
tests/: test_parametrization.py
