# Inside of setup.cfg
[metadata]
description-file = README.md

[mypy]
exclude = venv
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
warn_return_any = True
warn_unreachable = True

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 2
combine_as_imports = True
use_parentheses = True
